--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-icons/all-files": "^4.1.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
+    "motion": "^12.23.9",
     "next": "15.0.3",
     "next-intl": "^3.25.3",
     "react": "19.0.0-rc-66855b96-20241106",
